# coco-app

./: .env  .release-it.ts  Makefile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: .gitignore  config.yaml
docs/content.en/: _index.md
docs/content.en/docs/: _index.md
docs/content.en/docs/getting-started/: _index.md  screenshot.md
docs/content.en/docs/getting-started/installation/: _index.md  screenshot.md  windows.md
docs/content.en/docs/release-notes/: _index.md
scripts/: release.ts
src/: App.tsx  error-page.tsx  i18n.ts  index.d.ts  main.css  main.tsx  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  Entitlements.plist  Info.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: autostart.rs  lib.rs  main.rs  shortcut.rs
src-tauri/src/assistant/: mod.rs
src-tauri/src/common/: assistant.rs  auth.rs  connector.rs  datasource.rs  document.rs  health.rs  http.rs  mod.rs  profile.rs  register.rs  search.rs  search_response.rs  server.rs  traits.rs
src-tauri/src/local/: application.rs  mod.rs
src-tauri/src/search/: mod.rs
src-tauri/src/server/: auth.rs  connector.rs  datasource.rs  health.rs  http_client.rs  mod.rs  profile.rs  search.rs  servers.rs  websocket.rs
src-tauri/src/setup/: linux.rs  mac.rs  mod.rs
src/api/: request.ts  tauriFetchClient.ts
src/components/: Chat.tsx  CommandInput.tsx  CommandPalette.tsx  Footer.tsx  Header.tsx  LangToggle.tsx  Raycast.tsx  ThemeProvider.tsx  ThemeToggle.tsx
src/components/AppAI/: ApiDetails.tsx  AutoResizeTextarea.tsx  DropdownList.tsx  Footer.tsx  InputBox.tsx  Search.tsx
src/components/Assistant/: AutoResizeTextarea.tsx  Chat.tsx  ChatHeader.tsx  ChatInput.tsx  ChatMessage.tsx  ConnectPrompt.tsx  Greetings.tsx  Markdown.tsx  Sidebar.tsx  SourceResult.tsx  ThinkingSteps.tsx  index.tsx  types.ts
src/components/Auth/: CocoCloud.tsx  ConnectService.tsx  DataSourceItem.tsx  DataSourcesList.tsx  Divider.tsx  LoginForm.tsx  Sidebar.tsx  SocialButton.tsx  UserProfile.tsx  callback.template.ts  login2.tsx
src/components/ChatAI/: AutoResizeTextarea.tsx  Chat.tsx  ChatInput.tsx  ChatMessage.tsx  FullScreen.tsx  Markdown.tsx  Sidebar.tsx  ThemeToggle.tsx  TypingAnimation.tsx  index.css  index.tsx  types.ts
src/components/ChatMessage/: DeepRead.tsx  FetchSource.tsx  Markdown.tsx  MessageActions.tsx  PickSource.tsx  QueryIntent.tsx  SuggestionList.tsx  Think.tsx  index.tsx  markdown.css
src/components/Cloud/: Cloud.tsx  Connect.tsx  DataSourceItem.tsx  DataSourceItem2.tsx  DataSourcesList.tsx  Sidebar.tsx  UserProfile.tsx
src/components/Common/: ChatSwitch.tsx  DropdownList.tsx  Footer.tsx  InputBox.tsx  Search.tsx  Transition.tsx  index.tsx  types.ts
src/components/Common/ApiDetails/: index.tsx
src/components/Common/Icons/: IconWrapper.tsx  ItemIcon.tsx  RichIcon.tsx  ThemedIcon.tsx  TypeIcon.tsx  hooks.ts
src/components/Common/Tooltip/: index.tsx
src/components/MySearch/: ChatInterface.tsx  CommandPalette.tsx  SearchResults.tsx  index.tsx
src/components/Search/: AutoResizeTextarea.tsx  ContextMenu.tsx  DocumentDetail.tsx  DocumentList.tsx  DropdownList.tsx  FileList.tsx  Footer.tsx  InputBox.tsx  InputExtra.tsx  ListRight.tsx  Search.tsx  SearchHeader.tsx  SearchListItem.tsx  SearchPopover.tsx  SearchResults.tsx
src/components/SearchChat/: AutoResizeTextarea.tsx  ChatSwitch.tsx  DocumentDetail.tsx  DocumentList.tsx  DropdownList.tsx  Footer.tsx  InputBox.tsx  Search.tsx  SearchHeader.tsx  SearchResults.tsx  Switch.tsx  Transition.tsx  WebSearch.tsx  index.tsx
src/components/Settings/: AboutView.tsx  Account.tsx  AdvancedSettings.tsx  GeneralSettings.tsx  SettingsItem.tsx  SettingsPanel.tsx  SettingsSelect.tsx  SettingsToggle.tsx  ShortcutItem.tsx  ThemeSelector.tsx  index.tsx  index2.tsx  shortcut.ts
src/components/UI/Tooltip/: style.css
src/contexts/: ThemeContext.tsx
src/hooks/: useAutoResizeWindow.ts  useChatActions.ts  useEscape.ts  useFindConnectorIcon.ts  useInfiniteScroll.ts  useMessageChunkData.ts  useOSKeyPress.ts  useSettingsWindow.ts  useShortcutEditor.ts  useTray.ts  useWebSocket.ts  useWindows.ts
src/icons/: ArrowLeft.tsx  Ask.tsx  History.tsx  Link.tsx  Pin.tsx  PinOff.tsx  Reading.tsx  Reload.tsx  Retrieve.tsx  SVGWrap.tsx  Selection.tsx  Send.tsx  Server.tsx  Setting.tsx  Stop.tsx  ThemeAuto.tsx  ThemeDark.tsx  ThemeLight.tsx  ThemeSystem.tsx  UnPin.tsx  Understand.tsx  WindowsFull.tsx
src/locales/en/: translation.json
src/locales/zh/: translation.json
src/mock/: index.ts
src/pages/app/: index.tsx
src/pages/chat/: index.tsx
src/pages/login/: index.tsx
src/pages/main/: index.tsx
src/pages/settings/: index.tsx
src/pages/web/: index.tsx
src/routes/: Header.tsx  Layout.tsx  index.tsx  layout.tsx
src/stores/: appStore.ts  authStore.ts  chatStore.ts  connectStore.ts  logStore.ts  searchStore.ts  themeStore.ts
src/utils/: env.ts  index.ts  keyboardUtils.ts  platform.ts  tauri.ts
